Correção imagem hover

--- a/nft-preview-card-component-main/styles/style.css
+++ b/nft-preview-card-component-main/styles/style.css
@@ -52,7 +52,6 @@ figure {
 .img {
     max-width: 350px;
     max-height: 350px;
-    background-color: var(--Cyan);
     border-radius: 16px;
     position: relative
 }
@@ -63,21 +62,28 @@ figure {
 }
 
 .img > img:hover {
-    opacity: .50;
-
     cursor: pointer;
 }
 
-.img:hover:before {
+.img-overlay {
     position: absolute;
-    content: url(../images/icon-view.svg);
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    border-radius: inherit;
+    opacity: 0;
+    background-color: hsl(178, 100%, 50%, 50%);
+}
+
+#icon-view {
+    position: absolute;
     top: 50%;
     left: 50%;
-    
     transform: translate(-50%, -50%);
+}
 
-    z-index: 1;
-    cursor: pointer;
+.img-overlay:hover {
+    opacity: 1;
 }
 
 .txt p {
