--- a/006-results-summary-component-main/style.css
+++ b/006-results-summary-component-main/style.css
@@ -5,6 +5,16 @@
     --black: #000;
     --main-card-background: hsl(221, 100%, 96%);
 
+    /* Result */
+        /* Backround */
+            /* Gradient */
+            --result-background-gradient: hsl(252, 100%, 67%),  hsl(241, 81%, 54%);
+
+            --result-circle-gradient: hsla(241, 72%, 46%, 0), hsla(256, 72%, 46%, 1);
+        /* Text */
+        --result-primary-text: var(--white);
+        --result-secondary-text: hsl(241, 100%, 89%);
+
     /* Summary */
         /* Background */
         --summary-reaction: hsl(0, 100%, 67%);
@@ -17,15 +27,6 @@
         --summary-primary-text: hsl(224, 30%, 27%);
         --summary-secondary-text: hsl(225, 21%, 44%);
 
-    /* Result */
-        /* Backround */
-            /* Gradient */
-            --result-background-gradient: hsl(252, 100%, 67%),  hsl(241, 81%, 54%);
-
-            --result-circle-gradient: hsla(241, 72%, 46%, 0), hsla(256, 72%, 46%, 1);
-        /* Text */
-        --result-primary-text: var(--white);
-        --result-secondary-text: hsl(241, 100%, 89%);
 
     /* font */
         --font-1: 'hanken grotesk', sans-serif;
@@ -57,17 +58,18 @@ body{
 
 .main {
     display: grid;
-    grid-template-columns: 1fr 1fr; 
-    /* grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));  */
+    /* grid-template-columns: 1fr 1fr;  */
+    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr)); 
+    
     border-radius: 30px;
-    max-width: 800px;
+    width: 640px;
     /* Não sei fazer sombra */
-    box-shadow: 15px 15px 50px var(--main-card-background);
+    box-shadow: 15px 35px 40px var(--main-card-background);
 }
 
 .result,
 .summary {
-    padding: 40px;
+    padding: 30px;
 }
 
 .result {
@@ -79,6 +81,10 @@ body{
 }
 
 @media (max-width: 650px) {
+    body {
+        align-items: flex-start;
+    }
+    
     .main {
         grid-template-columns: 1fr;
     }
@@ -88,7 +94,7 @@ body{
 }
 
 .result > h2 {
-    font-size: 1.4rem;
+    font-size: 1.3rem;
     color: var(--result-secondary-text);
     margin-bottom: 30px;
 }
@@ -100,32 +106,35 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 200px;
-    height: 200px;
-    margin-bottom: 30px;
+    width: 170px;
+    height: 170px;
+    margin-bottom: 20px;
 }
 
 .score-reached {
-    font-size: 4rem;
+    font-size: 3.8rem;
     color: var(--result-primary-text);
     font-weight: 800;
+    line-height: 3.9rem;
 }
 
 .score-total {
-    font-size: 1.1rem;
+    font-size: 1rem;
+    font-weight: 700;
     color: var(--result-secondary-text);
+    opacity: .5;
 }
 
 .result > h3 {
-    font-size: 2rem;
+    font-size: 1.7rem;
     color: var(--result-primary-text);
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .result > p {
     color: var(--result-secondary-text);
     text-align: center;
-    font-size: 1.1rem;
+    font-size: 1rem;
     width: 25ch;
 }
 
@@ -136,26 +145,24 @@ body{
 }
 
 .summary > h2 {
-    font-size: 1.4rem;
-    /* margin-bottom: 30px; */
+    font-size: 1.3rem;
+    margin-bottom: 25px;
     color: var(--summary-primary-text);
 }
 
 .summary-score {
     display: flex;
     flex-direction: column;
-    gap: 20px;
-    /* margin-bottom: 20px; */
+    gap: 15px;
+    margin-bottom: 35px;
 }
 
 .summary-score-item {
-    background-color: rgb(191, 255, 191);
-    /* display: flex;
-    justify-content: space-between; */
-    padding: 15px;
+    padding: 14px;
     border-radius: 10px;
+
     display: grid;
-    grid-template-columns: max-content 2fr 1fr;
+    grid-template-columns: max-content 1fr max-content;
     align-items: center;
     gap: 5px;
 }
@@ -170,16 +177,18 @@ body{
 
 .summary-score-item > p {
     color: var(--summary-primary-text);
+    font-weight: 800;
 }
 
 .summary-score-item .score-total {
-    font-size: .9rem;
-    font-weight: 700;
+    font-size: 1rem;
+    font-weight: 800;
+
     color: var(--summary-secondary-text);
 }
 
 .summary-score-item#reaction {
-    background-color: hsla(0, 100%, 67%, 0.1);
+    background-color: hsla(0, 100%, 67%, 0.05);
 }
 
 .summary-score-item#reaction > h3 {
@@ -187,7 +196,7 @@ body{
 }
 
 .summary-score-item#memory {
-    background-color: hsla(39, 100%, 56%, 0.1);
+    background-color: hsla(39, 100%, 56%, 0.05);
 }
 
 .summary-score-item#memory > h3 {
@@ -195,7 +204,7 @@ body{
 }
 
 .summary-score-item#verbal {
-    background-color: hsla(166, 100%, 37%, 0.1);
+    background-color: hsla(166, 100%, 37%, 0.05);
 }
 
 .summary-score-item#verbal > h3 {
@@ -203,7 +212,7 @@ body{
 }
 
 .summary-score-item#visual {
-    background-color: hsla(234, 85%, 45%, 0.1);
+    background-color: hsla(234, 85%, 45%, 0.05);
 }
 
 .summary-score-item#visual > h3 {
@@ -217,7 +226,7 @@ body{
     text-align: center;
     color: var(--result-primary-text);
     font-weight: 700;
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 
 .summary > .button:hover {
